--- a/solution-hw3/detail.html
+++ b/solution-hw3/detail.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src=“objects.js“ type="text/javascript"></script>
     <title>Product Detail</title>
 </head>
 <body>
@@ -29,37 +30,37 @@
     </div>
   </div>
 
-    <div class="photo">
-        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
+  <div class="photo">
+    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
 
-        <div class="details">
-          <div>
-            <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
-            <h4 class="details">Glazing:</h4>
-            <label for="glazing"></label> 
-            <select name="glazing" id="glazingOptions" onchange="updatePrice()">
-            </select>
-          </div>
-    
-          <div>
-            <h4 class="details">Pack size:</h4>
-            <label for="size"></label>
-            <select name="size" id="sizeOptions" onchange="updatePrice()">
-            </select>
-          </div>
-          <h3 class="photo"> 
-            <p>
-              <span id="price">
-                $2.49
-              </span>
-            </p>
-            <span class="button"> 
-              Add to Cart 
-            </span> 
-          </h3>
-        </div>
+    <div class="details">
+      <div>
+        <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
+        <h4 class="details">Glazing:</h4>
+        <label for="glazing"></label> 
+        <select name="glazing" id="glazingOptions" onchange="updatePrice()">
+        </select>
+      </div>
+
+      <div>
+        <h4 class="details">Pack size:</h4>
+        <label for="size"></label>
+        <select name="size" id="sizeOptions" onchange="updatePrice()">
+        </select>
+      </div>
+      <h3 class="photo"> 
+        <p>
+          <span id="price">
+            $2.49
+          </span>
+        </p>
+        <span class="button"> 
+          Add to Cart 
+        </span> 
+      </h3>
     </div>
+  </div>
 
-    <script src="objects.js" type="text/javascript"></script>
-  </body>
+  <script src="objects.js" type="text/javascript"></script>
+</body>
 </html>
