--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="rollsData.js" type="text/javascript"></script> 
     <title>Cart</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
         <div class="top">
             <h2 class="menu">
                 <a href="index.html">PRODUCTS</a>
-                <a class="current" href="cart.html">CART</a>
+                <a  class="current" href="cart.html">CART</a>
             </h2>
 
             <div>
@@ -30,31 +29,65 @@
         </div>
     </div>
 
-    <div id="cart-items" class="cart-items">
-        <!-- Cart items will be dynamically added here -->
-    </div>
-
-    <div class="end">
-        <div>
-            <hr>
+    <div class="item1">
+        <div class="pic">
+            <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+            <h5><u>Remove</u></h5> 
         </div>
 
-        <h4 class="priceline">
-            <div>
-                Total: 
-            </div>
+        <p>
+            Original Cinnamon Roll            
+            <br>
+            Glazing: Keep Original
+            <br>
+            Pack Size: 1
+        </p>
 
-            <div id="total-price">
-                $0.00
-            </div>
+        <h4 class="prc">
+            $ 2.49
         </h4>
-
-        <div class="new">
-            <h2 class="button">
-                Checkout
-            </h2>
+    </div>
+    
+    <div class="item2">
+        <div class="pic">
+            <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+            <h5><u>Remove</u></h5> 
         </div>
+
+        <p>
+            Double Chocolate Cinnamon Roll
+            <br>
+            Glazing: Sugar milk
+            <br>
+            Pack Size: 6
+        </p>
+
+        <h4 class="prc">
+            $ 27.45
+        </h4>
     </div>
 
+        <div class="end">
+            <div>
+                <hr>
+            </div>
+
+            <h4 class="priceline">
+                <div>
+                    Total: 
+                </div>
+
+                <div>
+                    $ 29.94
+                </div>
+            </h4>
+
+            <div class="new">
+                <h2 class="button">
+                    Checkout
+                </h2>
+            </div>
+
+        </div>
 </body>
 </html>
