--- a/solution-hw5/detail.html
+++ b/solution-hw5/detail.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="rollsData.js" type="text/javascript"></script> 
+    <script src="objects.js" type="text/javascript" defer></script> 
     <title>Product Detail</title>
 </head>
 <body>
