--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -6,6 +6,27 @@
 </head>
 <body>
     <div class="header">
+        <div>
+            <a id="logo" href="index.html">
+                <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
+            </a>
+        </div>
+
+        <div class="top">
+            <h2 class="menu">
+                <a href="index.html">PRODUCTS</a>
+                <a  class="current" href="cart.html">CART</a>
+            </h2>
+
+            <div>
+                <hr>
+            </div>
+
+            <h3 class="pagetitle">
+                Shopping Cart
+            </h3>
+            
+        </div>
     </div>
 
     <div id="cart-container"></div>
