--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="cartmod.js" defer></script>
     <title>Cart</title>
 </head>
 <body>
@@ -52,6 +53,5 @@
         </div>
     </div>
 
-    <script src="cartmod.js"></script>
 </body>
 </html>
