--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="rollsData.js" type="text/javascript"></script> 
-    <script src="cartmod.js" type="text/javascript" defer></script> 
     <title>Product Detail</title>
 </head>
 <body>
@@ -49,11 +47,10 @@
         </div>
         
         <h3 class="photo"> 
-            <p>
-                Total Price: <span id="price">$0.00</span>
-            </p>
+            <p>Total Price: <span id="price">$0.00</span></p>
             <span class="button" onclick="addToCart()">Add to Cart</span>
         </h3>
+        
     </div>
   </div>
 
