--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="rollsData.js" type="text/javascript"></script>
+    <script src="combined.js" type="text/javascript" defer></script>
     <title>Cart</title>
 </head>
 <body>
@@ -52,5 +54,18 @@
         </div>
     </div>
 
+    <script>
+    function updateTotalPrice() {
+        let totalPrice = 0;
+        for (const roll of cart) {
+        totalPrice += roll.itemPrice;
+        }
+        
+        const totalPriceField = document.getElementById('total-price');
+        totalPriceField.textContent = `Total: $${totalPrice.toFixed(2)}`;
+    }
+    
+    updateTotalPrice();
+    </script>
 </body>
 </html>
